--- a/app/templates/lecturer/lecturerTimetable.html
+++ b/app/templates/lecturer/lecturerTimetable.html
@@ -6,50 +6,40 @@
     <h2>My Teaching Timetable</h2>
 
     <div class="timetable-container">
-        <!-- Header Row -->
-        <div class="timetable-row timetable-header">
-            <div class="timetable-time-label">Time / Day</div>
-            {% set days = ["MON", "TUE", "WED", "THU", "FRI"] %}
-            {% for day in days %}
-                <div class="timetable-cell" style="text-align: center;">{{ day }}</div>
+        <div class="timetable-time-label">Time / Day</div>
+        {% for day in ["MON", "TUE", "WED", "THU", "FRI"] %}
+            <div class="timetable-time-label">{{ day }}</div>
+        {% endfor %}
+        <div></div>
+        
+        {% for day in ["MON", "TUE", "WED", "THU", "FRI"] %}
+        <div class="timetable-column">
+            {% for hour in range(7, 24) %}
+            <div class="time-marker" style="top: {{ (hour - 7) * 60 }}px;">{{ "%02d:00"|format(hour) }}</div>
             {% endfor %}
-        </div>
 
-        <!-- Time Rows -->
-        {% for hour in range(7, 24) %}
-        <div class="timetable-row">
-            <div class="timetable-time-label">{{ "%02d:00"|format(hour) }}</div>
+            {% for row in timetable_rows if row.classDay|upper == day %}
+                {% set start_hour = row.classTime.split('-')[0].split(':')[0] | int %}
+                {% set start_min = row.classTime.split('-')[0].split(':')[1] | int %}
+                {% set end_hour = row.classTime.split('-')[1].split(':')[0] | int %}
+                {% set end_min = row.classTime.split('-')[1].split(':')[1] | int %}
 
-            {% for day in days %}
-            <div class="timetable-cell">
-                {% set has_class = false %}
-                {% for row in timetable_rows %}
-                    {% if row.classDay|upper == day %}
-                        {% set start_hour = row.classTime.split('-')[0].split(':')[0] | int %}
-                        {% if hour == start_hour %}
-                            {% set has_class = true %}
-                            {% set start_time = row.classTime.split('-')[0].strip() %}
-                            {% set end_time = row.classTime.split('-')[1].strip() %}
-                            {% set start_hour = start_time.split(':')[0] | int %}
-                            {% set end_hour = end_time.split(':')[0] | int %}
-                            {% set duration = end_hour - start_hour %}
-                            <div class="class-block" style="--duration: {{ duration }};">
-                                <strong>{{ row.courseName }}</strong><br>
-                                [{{ row.classType }}]<br>
-                                <i>{{ row.classRoom }}</i> | <span>{{ row.classTime }}</span>
-                                <hr>
-                                <div class="course-details">
-                                    {% for i in range(row.courseIntakes|length) %}
-                                    <small>
-                                        {{ row.courseIntakes[i] }} | {{ row.courseCodes[i] }} | {{ row.courseSections[i] }}
-                                    </small><br>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                        {% endif %}
-                    {% endif %}
-                {% endfor %}
-            </div>
+                {% set start_offset = ((start_hour - 7) * 60) + start_min %}
+                {% set end_offset = ((end_hour - 7) * 60) + end_min %}
+                {% set height = end_offset - start_offset %}
+
+                <div class="class-block"
+                    style="top: {{ start_offset }}px; height: {{ height }}px;">
+                    <strong>{{ row.courseName }}</strong><br>
+                    [{{ row.classType }}]<br>
+                    <i>{{ row.classRoom }}</i> | <span>{{ row.classTime }}</span>
+                    <hr>
+                    <div class="course-details">
+                        {% for i in range(row.courseIntakes|length) %}
+                        <small>{{ row.courseIntakes[i] }} | {{ row.courseCodes[i] }} | {{ row.courseSections[i] }}</small><br>
+                        {% endfor %}
+                    </div>
+                </div>
             {% endfor %}
         </div>
         {% endfor %}
