--- a/app/templates/lecturer/lecturerTimetable.html
+++ b/app/templates/lecturer/lecturerTimetable.html
@@ -1,58 +1,44 @@
 {% extends "lecturer/lecturerBase.html" %}
 {% block title %}Lecturer Timetable{% endblock %}
+
 {% block content %}
 <div class="menu-section">
     <h2>My Teaching Timetable</h2>
 
     <div class="timetable-container">
-        <table class="timetable">
-            <thead>
-                <tr>
-                    <th class="time-header">Time / Day</th>
-                    {% for day in ["MON", "TUE", "WED", "THU", "FRI"] %}
-                    <th class="day-header">{{ day }}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for hour in range(7, 24) %}
-                <tr class="time-row">
-                    <td class="time-slot">{{ "%02d:00"|format(hour) }}</td>
-                    {% for day in ["MON", "TUE", "WED", "THU", "FRI"] %}
-                    <td class="day-slot" data-day="{{ day }}" data-hour="{{ hour }}">
-                        {% for row in timetable_rows if row.classDay|upper == day %}
-                            {% set start_hour = row.classTime.split('-')[0].split(':')[0] | int %}
-                            {% set end_hour = row.classTime.split('-')[1].split(':')[0] | int %}
-                            
-                            {% if start_hour == hour %}
-                                {% set duration = end_hour - start_hour %}
-                                <div class="class-block" 
-                                     data-duration="{{ duration }}"
-                                     style="height: calc({{ duration }} * 50px);">
-                                    <div class="class-header">
-                                        <strong>{{ row.courseName }}</strong>
-                                    </div>
-                                    <div class="class-details">
-                                        <i class="room">{{ row.classRoom }}</i>
-                                        <span class="class-type">[{{ row.classType }}]</span>
-                                        <span class="time">{{ row.classTime }}</span>
-                                    </div>
-                                    <div class="course-groups">
-                                        {% for i in range(row.courseIntakes|length) %}
-                                        <div class="course-group">
-                                            {{ row.courseIntakes[i] }} | {{ row.courseCodes[i] }} | {{ row.courseSections[i] }}
-                                        </div>
-                                        {% endfor %}
-                                    </div>
+        <div class="timetable-time-label">Time / Day</div>
+        {% for day in ["MON", "TUE", "WED", "THU", "FRI"] %}
+            <div class="timetable-time-label">{{ day }}</div>
+        {% endfor %}
+        <div></div>
+                
+        {% for hour in range(7, 24) %}
+            {% set has_class = false %}
+            {% for row in timetable_rows if (row.classTime.split('-')[0].split(':')[0]|int) == hour %}
+                {% set has_class = true %}
+            {% endfor %}
+            
+            <div class="timetable-row {% if has_class %}has-class{% endif %}">
+                <div class="timetable-time-label">{{ "%02d:00"|format(hour) }}</div>
+                {% for day in ["MON", "TUE", "WED", "THU", "FRI"] %}
+                    <div class="timetable-cell">
+                        {% for row in timetable_rows if row.classDay|upper == day and (row.classTime.split('-')[0].split(':')[0]|int) == hour %}
+                            <div class="class-block" style="--duration: {{ (row.classTime.split('-')[1].split(':')[0]|int - row.classTime.split('-')[0].split(':')[0]|int) }}">
+                                <strong>{{ row.courseName }}</strong><br>
+                                [{{ row.classType }}]<br>
+                                <i>{{ row.classRoom }}</i> | <span>{{ row.classTime }}</span>
+                                <hr>
+                                <div class="course-details">
+                                    {% for i in range(row.courseIntakes|length) %}
+                                    <small>{{ row.courseIntakes[i] }} | {{ row.courseCodes[i] }} | {{ row.courseSections[i] }}</small><br>
+                                    {% endfor %}
                                 </div>
-                            {% endif %}
+                            </div>
                         {% endfor %}
-                    </td>
-                    {% endfor %}
-                </tr>
+                    </div>
                 {% endfor %}
-            </tbody>
-        </table>
+            </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
