--- a/app/templates/lecturer/lecturerTimetable.html
+++ b/app/templates/lecturer/lecturerTimetable.html
@@ -31,9 +31,9 @@
                                         [{{ row.classType }}]<br>
                                         Room: {{ row.classRoom }}<br>
                                         <small>{{ row.classTime }}</small>
-                                        <small>{{ row.courseIntake }}</small>
-                                        <small>{{ row.courseCode }}</small>
-                                        <small>{{ row.courseSection }}</small>
+                                        <small>{{ row.courseIntakes }}</small>
+                                        <small>{{ row.courseCodes }}</small>
+                                        <small>{{ row.courseSections }}</small>
                                     </div>
                                 {% endif %}
                             {% endif %}
