--- a/app/templates/lecturer/lecturerTimetable.html
+++ b/app/templates/lecturer/lecturerTimetable.html
@@ -5,8 +5,8 @@
     <h2>Lecturer Timetable</h2>
 
     <!-- Timetable Display -->
-    <div class="user-table-container">
-        <table class="user-data-table" border="1" style="height: 65px;">
+    <div class="user-table-container" styl="max-height: None;">
+        <table class="user-data-table" border="1">
             <thead>
                 <tr>
                     <th>Day / Time</th>
@@ -25,9 +25,8 @@
                             {% if row.classDay == day %}
                                 {% set start = row.classTime.split('-')[0].strip() %}
                                 {% set end = row.classTime.split('-')[1].strip() %}
-                                {% if time == start %}
-                                    {% set height = 65 * row.duration %}
-                                    <div style="border:1px solid #ccc; padding:4px; background:#f8f9fa; height:{{ height }}px;">
+                                {% if time >= start and time < end %}
+                                    <div style="border:1px solid #ccc; padding:4px; background:#f8f9fa;">
                                         <strong>{{ row.courseName }}</strong><br>
                                         [{{ row.classType }}]<br>
                                         Room: {{ row.classRoom }}<br>
